Added transparent background to image

--- a/app/src/main/res/layout-v28/activity_main.xml
+++ b/app/src/main/res/layout-v28/activity_main.xml
@@ -13,7 +13,8 @@
         android:layout_height="550dp"
         android:adjustViewBounds="true"
         android:scaleType="fitXY"
-        android:backgroundTint="#FFF2C690"
+        android:elevation="10dp"
+        android:backgroundTint="@android:color/transparent"
         app:layout_constraintBottom_toTopOf="@id/shareMeme"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
