--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,11 +9,12 @@
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/memeImage"
-        android:layout_width="350dp"
-        android:layout_height="550dp"
+        android:layout_width="380dp"
+        android:layout_height="580dp"
         android:adjustViewBounds="true"
         android:scaleType="fitXY"
-        android:backgroundTint="#FFF2C690"
+        android:backgroundTint="@android:color/transparent"
+        android:elevation="10dp"
         app:layout_constraintBottom_toTopOf="@id/shareMeme"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -38,20 +39,20 @@
         android:layout_width="75dp"
         android:layout_height="75dp"
         android:layout_margin="10dp"
+        android:backgroundTint="@color/black"
         android:insetLeft="0dp"
         android:insetTop="0dp"
         android:insetRight="0dp"
         android:insetBottom="0dp"
+        android:onClick="shareMeme"
         app:cornerRadius="50dp"
+        app:icon="@drawable/share_button"
         app:iconGravity="textStart"
         app:iconPadding="0dp"
         app:iconSize="35dp"
-        app:icon="@drawable/share_button"
-        android:backgroundTint="@color/black"
-        android:onClick="shareMeme"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@id/guideline2"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@id/memeImage"
         tools:ignore="UsingOnClickInXml" />
 
